# SimpleRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
cmake/: GlbindingConfig.cmake  GlfwConfig.cmake  ImguiConfig.cmake  SimpleRendererConfig.cmake  StbConfig.cmake  TinyObjLoaderConfig.cmake  WinInstallHacks.cmake
include/: Camera.hpp  Geometry.hpp  Input.hpp  Loader.hpp  Math.hpp  RenderConfiguration.hpp  RenderDefinitions.hpp  RenderModel.hpp  RenderPass.hpp  RenderPipeline.hpp  Renderer.hpp  RendererDefinitions.hpp  ShaderProgram.hpp  TestModels.hpp  Texture.hpp
shaders/: checkerboard_uv.frag  checkerboard_uv.vert  debug.frag  debug.vert  depth_pre_pass.frag  depth_pre_pass.vert  lighting.frag  lighting.vert  shadow_mapping.frag  shadow_mapping.vert  taa.frag  taa.vert  tone_mapping.frag  tone_mapping.vert  velocity.frag  velocity.vert
source/: Main.cpp  Math.cpp
